add total pages design

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,26 @@
     <string name="buy_text">Приобрести pro</string>
     <string name="no_buy_text">Нет, спасибо</string>
     <string name="continue_button">Начать</string>
+    <string name="version_selection_text">Вы откроете для себя много полезного если продолжите на Pro версии</string>
+    <string name="snackbar_buy">В данный момент полная версия недоступна для покупки</string>
+    <string name="snackbar_clear">Ясно</string>
+    <string name="total">Всего</string>
+    <string name="species_lang">Разновидности</string>
+    <string name="species_latin">Species</string>
+    <string name="amount">Кол</string>
+    <string name="sample_text">Пробы</string>
+    <string name="main_information_text">Основная информация</string>
+    <string name="date">Дата</string>
+    <string name="locality">Населенный пункт</string>
+    <string name="reservoir">Водоем</string>
+    <string name="coordinates">Координаты, DD:dd</string>
+    <string name="latitude">Широта</string>
+    <string name="longitude">Долгота</string>
+    <string name="save_button">Сохранить</string>
+    <string name="ip_index">IP<sub>1</sub></string>
+    <string name="im_index">IM<sub>TV</sub></string>
+    <string name="ib_index">IB</string>
+    <string name="index">ИНДЕКС</string>
+    <string name="further">Далее</string>
+    <string name="hydrobiont_image">Гидробионт</string>
 </resources>
